// cart/cart.proto

syntax = "proto3";

package cart;

service CartsService {
  rpc GetCartById(CartId) returns (Cart) {}
  rpc GetCartByVisit(Visit) returns (Cart) {}
}

message CartId {
  int32 id = 1;
}

message Visit {
  string brandCode = 1;
  int32 visitId = 2;
  int32 customerId = 3;
  int32 memberId = 4;
  string fingerprint = 5;
}

message Cart {
  string id = 1;
  repeated CartItem items = 3;
}

message CartItem {
  string id = 1;
  string cartId = 2;
  int32 variantId = 3;
  string pricepoint = 4;
}